progress w kv, but running into errors so abandom for now